[gd_scene load_steps=26 format=2]

[ext_resource path="res://mainMenu.gd" type="Script" id=1]
[ext_resource path="res://assetsNeeded/mainMenuBackround.png" type="Texture" id=2]
[ext_resource path="res://assetsNeeded/green_button00.png" type="Texture" id=3]
[ext_resource path="res://assetsNeeded/fonts/kenvector_future.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assetsNeeded/red_button11.png" type="Texture" id=5]
[ext_resource path="res://assetsNeeded/infoSprite1.png" type="Texture" id=6]
[ext_resource path="res://muteButton.gd" type="Script" id=7]
[ext_resource path="res://assetsNeeded/audioSprite1.png" type="Texture" id=8]
[ext_resource path="res://assetsNeeded/noAudioSprite1.png" type="Texture" id=9]
[ext_resource path="res://assetsNeeded/letterC.png" type="Texture" id=10]
[ext_resource path="res://assetsNeeded/letterH.png" type="Texture" id=11]
[ext_resource path="res://assetsNeeded/letterA.png" type="Texture" id=12]
[ext_resource path="res://assetsNeeded/letterO.png" type="Texture" id=13]
[ext_resource path="res://assetsNeeded/letterT.png" type="Texture" id=14]
[ext_resource path="res://assetsNeeded/letterI.png" type="Texture" id=15]
[ext_resource path="res://assetsNeeded/letterM.png" type="Texture" id=16]
[ext_resource path="res://assetsNeeded/letterE.png" type="Texture" id=17]
[ext_resource path="res://assetsNeeded/letterR.png" type="Texture" id=18]
[ext_resource path="res://assetsNeeded/finalPopupBackround.png" type="Texture" id=19]
[ext_resource path="res://assetsNeeded/closeCircle.png" type="Texture" id=20]
[ext_resource path="res://assetsNeeded/Sounds/mainClick.ogg" type="AudioStream" id=21]
[ext_resource path="res://assetsNeeded/Sounds/sideClick.ogg" type="AudioStream" id=22]

[sub_resource type="DynamicFont" id=1]

size = 42
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 42
use_mipmaps = false
use_filter = true
font_data = ExtResource( 4 )
_sections_unfolded = [ "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 20
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="mainMenu" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="menuTexture" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 386.0
margin_bottom = 736.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0

[node name="playButtonSprite" type="Sprite" parent="." index="1"]

editor/display_folded = true
position = Vector2( 225, 450 )
scale = Vector2( 1.25, 1.6 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="playButton" type="Button" parent="playButtonSprite" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -98.0
margin_top = -27.0
margin_right = 97.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = " PLAY"
flat = true
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="quitButtonSprite" type="Sprite" parent="." index="2"]

editor/display_folded = true
position = Vector2( 225, 560 )
scale = Vector2( 1.25, 1.6 )
texture = ExtResource( 5 )

[node name="quitButton" type="Button" parent="quitButtonSprite" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -96.0
margin_top = -28.0
margin_right = 96.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = " QUIT"
flat = true
align = 1

[node name="infoButton" type="Button" parent="." index="3"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 53.0
margin_bottom = 55.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
flat = true
align = 1

[node name="infoSprite" type="Sprite" parent="infoButton" index="0"]

position = Vector2( 23.8441, 25.1239 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="muteButton" type="Button" parent="." index="4"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 398.0
margin_top = 1.0
margin_right = 448.0
margin_bottom = 56.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
flat = true
align = 1
script = ExtResource( 7 )

[node name="audioSprite" type="Sprite" parent="muteButton" index="0"]

visible = false
position = Vector2( 24, 28 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 8 )
_sections_unfolded = [ "Transform" ]

[node name="noAudioSprite" type="Sprite" parent="muteButton" index="1"]

visible = false
position = Vector2( 24, 28 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 9 )
_sections_unfolded = [ "Pause", "Transform" ]

[node name="chaoticHammer" type="Node2D" parent="." index="5"]

editor/display_folded = true
position = Vector2( 198.979, 248.379 )
_sections_unfolded = [ "Pause" ]

[node name="letterC" type="Sprite" parent="chaoticHammer" index="0"]

position = Vector2( -151.289, -27.7207 )
rotation = -0.305433
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 10 )
_sections_unfolded = [ "Transform" ]

[node name="letterH" type="Sprite" parent="chaoticHammer" index="1"]

position = Vector2( -87.2076, -25 )
rotation = 0.261799
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 11 )
_sections_unfolded = [ "Transform" ]

[node name="letterA" type="Sprite" parent="chaoticHammer" index="2"]

position = Vector2( -31.2886, -22.2792 )
rotation = -0.174533
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 12 )
_sections_unfolded = [ "Transform" ]

[node name="letterO" type="Sprite" parent="chaoticHammer" index="3"]

position = Vector2( 25.8471, -23.6396 )
rotation = -0.115192
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 13 )
_sections_unfolded = [ "Transform" ]

[node name="letterT" type="Sprite" parent="chaoticHammer" index="4"]

position = Vector2( 83.1263, -22.2792 )
rotation = 0.0872665
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 14 )
_sections_unfolded = [ "Transform" ]

[node name="letterI" type="Sprite" parent="chaoticHammer" index="5"]

position = Vector2( 145.847, -23.6396 )
rotation = -0.261799
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 15 )
_sections_unfolded = [ "Transform" ]

[node name="letterC2" type="Sprite" parent="chaoticHammer" index="6"]

position = Vector2( 203.126, -26.3604 )
rotation = 0.0872665
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 10 )
_sections_unfolded = [ "Transform" ]

[node name="letterH2" type="Sprite" parent="chaoticHammer" index="7"]

position = Vector2( -150, 45 )
rotation = 0.349066
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 11 )
_sections_unfolded = [ "Transform" ]

[node name="letterA2" type="Sprite" parent="chaoticHammer" index="8"]

position = Vector2( -90, 45 )
rotation = -0.174533
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 12 )
_sections_unfolded = [ "Transform" ]

[node name="letterA3" type="Sprite" parent="chaoticHammer" index="9"]

position = Vector2( -30, 45 )
rotation = -0.174533
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 12 )
_sections_unfolded = [ "Transform" ]

[node name="letterM" type="Sprite" parent="chaoticHammer" index="10"]

position = Vector2( 30, 45 )
rotation = 0.174533
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 16 )
_sections_unfolded = [ "Transform" ]

[node name="letterM2" type="Sprite" parent="chaoticHammer" index="11"]

position = Vector2( 90, 45 )
rotation = 0.174533
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 16 )
_sections_unfolded = [ "Transform" ]

[node name="letterE" type="Sprite" parent="chaoticHammer" index="12"]

position = Vector2( 150, 45 )
rotation = -0.0872665
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 17 )
_sections_unfolded = [ "Transform" ]

[node name="letterR" type="Sprite" parent="chaoticHammer" index="13"]

position = Vector2( 210, 45 )
rotation = 0.0872665
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 18 )
_sections_unfolded = [ "Transform" ]

[node name="infoPopupMenu" type="PopupMenu" parent="." index="6"]

pause_mode = 2
editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 200.0
margin_top = 314.0
margin_right = 220.0
margin_bottom = 334.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
items = [  ]
hide_on_state_item_selection = false
_sections_unfolded = [ "Pause", "Popup", "Rect", "Visibility" ]

[node name="infoPopupSprite" type="Sprite" parent="infoPopupMenu" index="1"]

position = Vector2( 28.6622, 98.1467 )
scale = Vector2( 0.904405, 0.838458 )
texture = ExtResource( 19 )
_sections_unfolded = [ "Transform" ]

[node name="createdByLabel" type="Label" parent="infoPopupMenu" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -179.0
margin_top = -199.0
margin_right = 239.0
margin_bottom = 396.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0600739, 0.301929, 0.496094, 1 )
text = " Created
 by
 GTS10


 Credits:

 Engine: 
 Godot

 Image Editing: 
 GIMP

 Assets:
 kenney.nl

 Icons:
 icons8.com

 Sound:
 freesoundeffects.com
 &
 soundbible.com"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="closeButtonSprite" type="Sprite" parent="infoPopupMenu" index="3"]

editor/display_folded = true
position = Vector2( 191.728, -206.79 )
scale = Vector2( 1.8, 1.8 )
texture = ExtResource( 20 )
_sections_unfolded = [ "Transform" ]

[node name="closeButton" type="Button" parent="infoPopupMenu/closeButtonSprite" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -21.0
margin_top = -21.0
margin_right = 20.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
flat = true
align = 1

[node name="mainClickSound" type="AudioStreamPlayer" parent="." index="7"]

stream = ExtResource( 21 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="sideClickSound" type="AudioStreamPlayer" parent="." index="8"]

stream = ExtResource( 22 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="pressed" from="playButtonSprite/playButton" to="." method="_on_playButton_pressed"]

[connection signal="pressed" from="quitButtonSprite/quitButton" to="." method="_on_quitButton_pressed"]

[connection signal="pressed" from="infoButton" to="." method="_on_infoButton_pressed"]

[connection signal="pressed" from="muteButton" to="." method="_on_muteButton_pressed"]

[connection signal="pressed" from="infoPopupMenu/closeButtonSprite/closeButton" to="." method="_on_closeButton_pressed"]


